# tinyshakespeare-gpt

./: README.md  convergence_probe.py  gpt.py  lionk_ccwd.py  main.py  pyproject.toml  references.bib  scion.py  scionc.py  train_shakespeare.py  tune_lr.py
data/: tiny_test.txt
docs/: 4_moment_bounds.md  hyperball_parametrization.md  lionk_ccwd_rms_parametrization.md  schedulefree_scionh.md  scionc_rms_radius_parametrization.md  scionc_shrink_rms_parametrization.md  scionc_steady_state_parametrization.md
scionc/: __init__.py  kv_cache_eval.py  train_shakespeare.py
scionc/lmos/: __init__.py  core.py  streaming_svd.py
scionc/models/: __init__.py  gpt.py
scionc/optim/: __init__.py  lionk.py  parametrization.py  scion.py  setup.py
scionc/probes/: __init__.py  convergence.py  depth_scaling.py  kv_cache_eval.py  kv_cache_spectrum.py  line.py  optimizer_stats.py
scionc/ulmos/: __init__.py  core.py  streaming_svd.py
scionh/: __init__.py  compile_env.py  train_shakespeare.py
scionh/experiments/: __init__.py  oracle_summary.py  oracle_sweep.py  prediction_audit.py
scionh/models/: __init__.py  deepnorm.py  gpt.py  inspection.py
scionh/optim/: __init__.py  auxiliary.py  normalized_sgd.py  parametrization.py  scion.py  setup.py
scionh/probes/: __init__.py  convergence.py  depth_scaling.py  kv_cache_eval.py  kv_cache_spectrum.py  line.py  optimizer_stats.py  perf.py
scionh/training/: __init__.py  checkpoints.py  cli.py  device.py  evaluation.py  metrics.py  runtime.py
scionh/ulmos/: __init__.py  core.py  streaming_svd.py
